# bsglew_renderer

./: .gitmodules  CMakeLists.txt  README.md
include/Renderer/: Buffer.h  IndexBuffer.h  OpenGLIndexBuffer.h  OpenGLVertexBuffer.h  Renderer.h  VertexBuffer.h
libs/: glew.cmake
src/: main.cpp
src/Renderer/: Buffer.cpp  IndexBuffer.cpp  OpenGLIndexBuffer.cpp  OpenGLVertexBuffer.cpp  Renderer.cpp  VertexBuffer.cpp
tests/: CMakeLists.txt
